--- a/computer.html
+++ b/computer.html
@@ -1,6 +1,10 @@
 <html>
     <head>
         <title>DaeDe | 컴퓨터 사양</title>
+        <meta property="og:title" content="컴퓨터 사양 - DaeDe" />
+        <meta property="og:description" content="유튜버 데대님의 컴퓨터 사양을 알려주는 사이트 입니다" />
+        <meta property="og:locale" content="ko_KR" />
+        <meta property="og:url" content="https://www.daede.cf/computer" />
     </head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
