--- a/computer.html
+++ b/computer.html
@@ -4,6 +4,7 @@
         <meta property="og:title" content="컴퓨터 사양 - DaeDe" />
         <meta property="og:description" content="유튜버 데대님의 컴퓨터 사양을 알려주는 사이트 입니다" />
         <meta property="og:locale" content="ko_KR" />
+        <meta property="og:image" content="http://www.daede.cf/image/logo.jpg" />
         <meta property="og:url" content="https://www.daede.cf/computer" />
     </head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
