--- a/shop.html
+++ b/shop.html
@@ -1,11 +1,11 @@
 <html>
     <head>
-        <title>DeDae | 컴퓨터 사양</title>
-        <meta property="og:title" content="컴퓨터 사양 - DeDae" />
-        <meta property="og:description" content="유튜버 데대님의 컴퓨터 사양을 알려주는 사이트 입니다" />
+        <title>DeDae | Shop</title>
+        <meta property="og:title" content="DeDae" />
+        <meta property="og:description" content="데대 유튜브" />
         <meta property="og:locale" content="ko_KR" />
         <meta property="og:image" content="http://dedae.kro.kr/image/logo.jpg" />
-        <meta property="og:url" content="https://dedae.kro.kr/computer" />
+        <meta property="og:url" content="https://dedae.kro.kr/" />
     </head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,15 +24,14 @@
     <body style="background-color: #101010;">
         <div id="menu" style="background-color: white; border: 2px solid white;border-radius: 50px;">
             <img class="logo" src="./image/logo.jpg" alt="Logo" style="margin-left: 2%; width: 72px;"/>&nbsp;&nbsp;&nbsp;<titl>DaeDe</titl>
+            <div style="float: right;" id="menu_right">
+                <a href="https://www.youtube.com/c/DAEDE" style="text-decoration: none; bottom: 0;"><img class="yt" src="./image/yt.png" alt="youtube" style="width: 20px;"/>&nbsp;<titl style="font-size: 17px;bottom: 0;">DaeDe</titl></a>
+            </div>
+            <div style="border: 1px black; border-radius: 2px;">
+                DAEDE private pack
+            </div>
         </div>
         <br/>
-        <div id="com" style="background-color: #101010; color: white;">
-            <img class="com_img" src="./image/com.png" alt="com_img" style="margin-left: 2%; width: 130px;"/>&nbsp;&nbsp;&nbsp;<titl style="font-size: 250%;">컴퓨터 사양</titl><br/>
-            <br/>
-            <com>소프트웨어(OS) | macOS Catalina (imac)</com><br/><br/>
-            <com>CPU(4Core 8Thread) | Intel Core I5</com><br/><br/>
-            <com>메모리(Ram) | 8GB 1600Mhz DDR3</com><br/><br/>
-            <com>그래픽카드(GPU) | NVDIA GeForce GT 640M 512 MB</com><br/>
-        </div>
+        
     </body>
 </html>
