--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <html>
     <head>
-        <title>DaeDe | Home</title>
+        <title>DeDae | 홈</title>
+        <meta property="og:title" content="DeDae" />
+        <meta property="og:description" content="데대 유튜브" />
+        <meta property="og:locale" content="ko_KR" />
+        <meta property="og:image" content="http://www.daede.cf/image/logo.jpg" />
+        <meta property="og:url" content="https://www.daede.cf/" />
     </head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -8,12 +13,23 @@
     <style>
         titl{
             font-family: 'Gothic A1', sans-serif;
-            font-size: 300%;
+            font-size: 48px;
+        }
+        com{
+            font-family: 'Gothic A1', sans-serif;
+            font-size: 24px;
+            margin-left: 4%; 
         }
     </style> 
     <body style="background-color: #101010;">
         <div id="menu" style="background-color: white; border: 2px solid white;border-radius: 50px;">
-            <img class="logo" src="./image/logo.jpg" alt="Logo" style="margin-left: 2%; width: 5%;"/>&nbsp;&nbsp;&nbsp;<titl>DaeDe</titl>
+            <img class="logo" src="./image/logo.jpg" alt="Logo" style="margin-left: 2%; width: 72px;"/>&nbsp;&nbsp;&nbsp;<titl>DaeDe</titl>
+            <div style="float: right;" id="menu_right">
+                asdas
+                <a href="https://www.youtube.com/c/DAEDE" style="text-decoration: none; bottom: 0;"><img class="yt" src="./image/yt.png" alt="youtube" style="width: 20px;"/>&nbsp;<titl style="font-size: 17px;bottom: 0;">DaeDe</titl></a>
+            </div>
         </div>
+        <br/>
+        
     </body>
 </html>
